--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <td><a href="https://drive.google.com/drive/u/4/home">3. Chip o-iii</a></td>
   </tr>
   <tr>
-    <td><a href="https://drive.google.com/drive/u/5/home">4. Chip o-iv</a></td>
+    <td><a href="a.html">4. Chip o-iv</a></td>
   </tr>
 </table>
 
